--- v1.1 (2018-xx-xx) ---
* Improve static build of openssl package.
* Improve notifications during build of packages.

--- v1.0 (2018-01-10) ---
* First public release.
