@@ -1,6 +1,8 @@
 --- v1.1 (2018-xx-xx) ---
 * Improve static build of openssl package.
 * Improve notifications during build of packages.
+* Simplify usage of *.patch files: apply them directly from UnpackSources()
+  function instead of forcing of usage of additional scripts (see *-patches.sh).
 
 --- v1.0 (2018-01-10) ---
 * First public release.
